still not working (change some section)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>mera bharat</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
 <header>
@@ -25,7 +23,7 @@
     <main>
             <section>
                 <h3>Welcome to India</h3>
-                <h1>DO COME & VISIT<span class="change_content"></span></h1>
+                <h1>DO COME & VISIT <span class="change_content"> </span> <!--<span style="margin-top: -10px;"> | </span>--> </h1>
                 <p>"India once is not enough</p>
                 <a href="#" class="btn-1">learn more</a>
                 <a href="#" class="btn-2">signup here</a>
